--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.10.4",
     "howler": "^2.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "is-valid-domain": "^0.1.6",
     "qrcode": "^1.5.0",
     "socket.io-client": "^4.5.1",
     "standardized-audio-context": "^25.3.28",
