--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "ngrok": "^4.3.1",
     "nodemon": "^2.0.16",
     "socket.io": "^4.5.1",
+    "sqlite3": "^5.0.8",
     "zebedee-nodejs": "^0.4.1"
   },
   "devDependencies": {
