--- a/server/.env.sample
+++ b/server/.env.sample
@@ -2,6 +2,7 @@
 # export LN_QUIZ_PORT=3000
 # export FRONTEND_ORIGIN=<usually localhost> # for socket.io to receive webhooks from Zebedee
 # export API_BASE=<usually localhost:3000> # deployed API server base url
+# export NODE_ENV=<'production' or 'development'> # deployed API server base url
 
 # NOT YET REQUIRED - TODO: allow LND as payments backend instead of Zebedee
 # lnd
