--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my21sats",
+  "name": "ln-quiz",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:aeschylus/my21sats.git",
@@ -22,8 +22,7 @@
     "ngrok": "^4.3.1",
     "nodemon": "^2.0.16",
     "socket.io": "^4.5.1",
-    "sqlite3": "^5.0.8",
-    "zebedee-nodejs": "^0.4.1"
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
